--- a/ViewFinder/Base.lproj/Main.storyboard
+++ b/ViewFinder/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--ViewFinder-->
         <scene sceneID="Aup-Pb-j3R">
             <objects>
-                <tableViewController id="K11-RX-CQW" sceneMemberID="viewController">
+                <tableViewController id="K11-RX-CQW" customClass="PhotoTableViewController" customModule="ViewFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CKA-fs-0DH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -66,15 +66,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Photo Library"/>
                                 <connections>
-                                    <action selector="libraryButtonTapped:" destination="TbJ-AO-4ft" eventType="touchUpInside" id="dHd-da-QmK"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhh-cD-LSx">
-                                <rect key="frame" x="181" y="499" width="52" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Albums"/>
-                                <connections>
-                                    <action selector="albumsButtonTappedWithSender:" destination="TbJ-AO-4ft" eventType="touchUpInside" id="agh-eX-okt"/>
+                                    <action selector="libraryButtonTapped:" destination="TbJ-AO-4ft" eventType="touchUpInside" id="BdT-OS-j1m"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="KEl-SR-D6u">
@@ -87,11 +79,17 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="captionText:" destination="TbJ-AO-4ft" eventType="editingDidEnd" id="Fi9-kx-Fys"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tnq-Ka-Qwb">
                                 <rect key="frame" x="190" y="582" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="savePhotoTapped:" destination="TbJ-AO-4ft" eventType="touchUpInside" id="37y-Xj-Osr"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -99,6 +97,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Add New Photo" id="BzJ-QH-sOM"/>
                     <connections>
+                        <outlet property="captionText" destination="xfj-uu-r41" id="xHf-1G-ojA"/>
                         <outlet property="imageView" destination="KEl-SR-D6u" id="0Vi-oP-qyx"/>
                     </connections>
                 </viewController>
